--- a/sections/multiImageSlider.liquid
+++ b/sections/multiImageSlider.liquid
@@ -6,7 +6,7 @@
 <div class="container">
   <div id="owl-demo" class="owl-carousel owl-theme">
 
-      <div class="item"><img src="{{ '1.jpg' | asset_url }}" /></div>
+      <div class="item smp"><img src="{{ '1.jpg' | asset_url }}" /></div>
       <div class="item"><img src="{{ '2.jpg' | asset_url }}" /></div>
       <div class="item"><img src="{{ '3.jpg' | asset_url }}" /></div>
       <div class="item"><img src="{{ '4.jpg' | asset_url }}" /></div>
